--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,13 @@
         visibility: hidden;
         position: absolute;
     }
-    .login-image{
+    .signup-image{
         width: 50vw;
         height: 100%;
+        background-color: black;
+    }
+    .sign-up-forms{
+        width: 50vw;
     }
  }
 
@@ -365,17 +369,20 @@ a, a:hover, a:focus{
 }
 
 #student-signup-form{
-    padding: 0 19vw;
+    padding: 0 10vw;
+    width: 100%;
 }
 
 #teacher-signup-form{
-    padding: 0 19vw;
+    padding: 0 10vw;
+    width: 100%;
 }
 .signup-btns{
     width: 350px;
 }
 .signup-btns button{
-    margin: 1%;
+    margin: 1% 1% 10% 1%;
+    padding: 10px;
 }
 .form-nav-btns button{
     margin: 1%;
