--- a/styles/signup_form_styles.css
+++ b/styles/signup_form_styles.css
@@ -59,7 +59,7 @@ body{
     font-size: 1.7em;
 }
 #form-spacing{
-    background-image:url('signUp.jpg');
+    background-image:url('images/SignUp.jpg');
     background-size: 100vw;
     background-repeat: no-repeat;
 }
