--- a/styles/signup_form_styles.css
+++ b/styles/signup_form_styles.css
@@ -1,31 +1,92 @@
-@media (min-width: 768px) {
+@media (min-width: 1092px) {
 
     .signup-image{
-        width: 42vw;
+        width: 55vw;
         height: 100%;
-    }
+    }   
     .sign-up-forms{
-        width: 50vw;
+        width: 41vw;
+        
+    }
+    .sign-up-forms h2{
+        font-size: 2.4em;
     }
  }
 
+ @media (max-width: 1092px) {
+
+    .signup-image{
+        width: 40vw;
+        height: 100%;
+    }
+    .sign-up-forms{
+        width: 60vw;
+    }
+    .sign-up-forms h2{
+        font-size: 2.2em;
+    }
+ }
+ @media (max-width: 860px) {
+
+    .signup-image{
+        width: 0;
+        height: 0;
+    }
+    .sign-up-forms h2{
+        font-size: 2em;
+    }
+
+ }
+ @media(max-width: 527px){
+    .sign-up-forms h2{
+        font-size: 1.5em;
+    }
+ }
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    background:url('images/SignUp.jpg') no-repeat;
+    background-size: cover;
+    min-height: 530px;
 }
 #form-spacing{
     height: 100%;
 }
+#form-header{
+    width: 100%;
+    padding: 2vh 2vh 3vh 2vh;
 
+}
+#form-header h2{
+    padding-bottom: 2vh;
+}
+    
+.sign-up-forms{
+    padding: 0 5vw;
+    color: white;
+    
+}
+.sign-up-forms p{
+    color: white;
+}
+
+.student-background{
+    background-color: rgba(2,104,237,0.9);
+}
+.teacher-background{
+    background-color: rgba(39, 27, 83, 0.9)
+}
 #student-signup-form{
-    padding: 10% 5vw;
+    padding: 0 5vw;
+    padding-bottom: 3vh;
     width: 100%;
 }
 
 #teacher-signup-form{
-    padding: 10% 5vw;
+    padding: 0 5vw;
+    padding-bottom: 3vh;
     width: 100%;
 }
 .signup-btns{
@@ -36,30 +97,84 @@ body{
     padding: 10px;
 }
 #student-signup-btn{
-    margin-right: 3%;
-}
-#teacher-signup-btn{
-    margin-left: 3%;
-    background-color:rgba(39, 27, 83, 0.9);
+    border-radius: 100px;
     outline: none;
     border: none;
+    margin-right: 1%;
 }
+#student-signup-btn:hover{
+    background-color:white;
+    color:rgba(2,104,237,0.9);
+}
+#student-signup-btn:after{
+    background-color:white;
+    color:rgba(2,104,237,0.9);
+    outline-color:rgba(2,104,237,0.9);
+}
+#student-signup-btn:focus{
+    background-color:white;
+    color:rgba(2,104,237,0.9);
+    outline-color:rgba(2,104,237,0.9);
+}
+
+
+#teacher-signup-btn{
+    border-radius: 100px;
+    outline: none;
+    border: none;
+    margin-left: 1%;
+}
+#teacher-signup-btn:hover{
+    color: rgba(39, 27, 83, 0.9);
+    background-color: white;
+}
+#teacher-signup-btn:after{
+    background-color:white;
+    color:rgba(39, 27, 83, 0.9);
+    outline-color:rgba(39, 27, 83, 0.9);
+}
+#teacher-signup-btn:focus{
+    color:rgba(39, 27, 83, 0.9);
+    background-color:white;
+    outline-color: rgba(39, 27, 83, 0.9);
+}
+.on-student-btn-click{
+    color:rgba(2,104,237,0.9);
+    background-color: white;
+}
+.on-teacher-btn-click{
+    color:rgba(39, 27, 83, 0.9);
+    background-color: white;
+}
+
+.default-color{
+    color: white;
+}
+
 .form-nav-btns button{
     margin: 1%;
 }
 
-.sign-up-forms{
-    padding: 5vw;
+.front-arrow:hover{
+    color:rgba(39, 27, 83, 0.9);
+    background-color: white;
+}
+
+.back-arrow:hover{
+    color:rgba(39, 27, 83, 0.9);
+    background-color: white;
+}
+.front-arrow{
     color: white;
 }
-.sign-up-forms p{
+.back-arrow{
     color: white;
 }
-.sign-up-forms h2{
-    font-size: 1.7em;
-}
-#form-spacing{
-    background-image:url('images/SignUp.jpg');
-    background-size: 100vw;
-    background-repeat: no-repeat;
-}
+.collapse {
+    
+    transition: ease 0.3s;
+  }
+.collapse.show {
+    
+    transition: ease 0.3s;
+  }
