--- a/styles/signup_form_styles.css
+++ b/styles/signup_form_styles.css
@@ -12,10 +12,16 @@
     .sign-up-forms h2{
         font-size: 2em;
     }
+    body{
+        background:url('images/SignUp.jpg') no-repeat;
+    }
  }
 
  @media (max-width: 1092px) {
 
+    body{
+        background:url('images/SignUpTablet.jpg') no-repeat;
+    }
     .signup-image{
         width: 40vw;
         height: 100%;
@@ -39,6 +45,9 @@
 
  }
  @media(max-width: 527px){
+    body{
+        background:url('images/SignUpMobile.jpg') no-repeat;
+    }
     .sign-up-forms h2{
         font-size: 1.5em;
     }
@@ -48,7 +57,6 @@ body{
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background:url('images/SignUp.jpg') no-repeat;
     background-size: cover;
     min-height: 653px;
 }
@@ -81,7 +89,7 @@ body{
     background-color: rgba(2,104,237,0.9);
 }
 .teacher-background{
-    background-color:  rgba(39, 27, 83, 0.9);
+    background-color: #6173C2
 }
 #student-signup-form{
     padding: 0 5vw;
