--- a/styles/login_animations.css
+++ b/styles/login_animations.css
@@ -1,21 +1,34 @@
 body{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh
+    flex-direction: column;
+    position: absolute;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    margin: 0;
 }
 .text-animation{
     width: 50vw;
 }
+
+#motion-wrapper{
+    position: relative;
+    display: block;
+    background-color: blue;
+    margin: 0;
+    padding: 0;
+}
 .motion{
-    position: absolute;
+   width: 100%;
 }
 
-.el{
+#el{
     position: absolute;
-    width: 10px;
-    height: 10px;
-    background-color: blue;
-    display: inline-block;
+    top:-1rem;
+    left: -1rem;
+    width: 2rem;
+    height: 2rem;
+    background-color: black;
 }
