--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -16,6 +16,9 @@
     .nav-item{
         width: 9%;
     }
+    .login-container h2{
+        font-size: 3em;
+    }
  }
 
 @media (max-width: 991px){
@@ -39,6 +42,9 @@
     .nav-item{
         width: 100%;
     }
+    .login-container h2{
+        font-size: 2.5em;
+    }
 }
 @media (max-width: 590px) { 
     .title{
@@ -60,8 +66,26 @@
         width: calc(100% - 60px);
         transition: width ease 0.3s;
     }
+    .login-container h2{
+        font-size: 2em;
+    }
  }
-
+/* width */
+#sidebar ul::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+#sidebar ul::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgba(39, 27, 83, 0);
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+#sidebar ul::-webkit-scrollbar-thumb {
+    background: white; 
+    border-radius: 10px;
+  }
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -82,8 +106,10 @@ a, a:hover, a:focus{
 }
 .navbar.padding{
     padding: 6px 30px;
+
 }
 .navbar{
+    
     padding: 40px 30px;
     margin: 0;
     color: white;
@@ -91,6 +117,7 @@ a, a:hover, a:focus{
     border-radius: 0;
     width: 100%;
     transition: all 0.25s;
+    z-index:3;
 }
 .navbar.move-navbar-right{
     transform: translate(200px,0);
@@ -275,6 +302,7 @@ a, a:hover, a:focus{
     height: 100vh;
     position:sticky;
     top:0;
+    z-index: 2;
 }
 #sidebar{
     display: flex;
@@ -285,7 +313,7 @@ a, a:hover, a:focus{
     background: rgba(107,97,144, 0.8);
     color: white;
     transition: all 0.3s;
-    z-index: 2;
+    z-index: 3;
 }
 #sidebar.active{
     margin-left: -200px;
@@ -295,7 +323,9 @@ a, a:hover, a:focus{
     align-self: center;
     padding: 20px;
 }
-
+.components{
+    overflow: auto;
+}
 #sidebar ul li{
     display: flex;
     flex-direction: column;
@@ -346,7 +376,7 @@ a, a:hover, a:focus{
 
 #content{
     text-align: justify;
-    padding: 0 50px;
+    padding: 0 10vw;
     margin:0;
 }
 
@@ -365,7 +395,6 @@ a, a:hover, a:focus{
 
 .login-container h2{
     width: 30vw;
-    font-size: 3em;
     font-family: 'Bitter', serif;
     font-weight: 700;
 }
@@ -387,8 +416,12 @@ a, a:hover, a:focus{
     padding-left: 10px;
     font-size: 1.3em;
 }
+
+#slideshow{
+    z-index: 0 !important;
+}
 .carousel-item{
-  height: 83vh !important;
+    height: 60vh;
 }
 .footer{
     color: white;
