--- a/styles/signup_form.css
+++ b/styles/signup_form.css
@@ -1,4 +1,38 @@
 @import "https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap";
+@media (min-width: 992px) {
+    #signup-forms{
+        width: 50%;
+    }
+
+ }
+
+@media (max-width: 991px){
+    #signup-forms{
+        width: 80%;
+    }
+
+}
+@media (max-width: 590px) { 
+    #signup-forms{
+        width: 95%;
+    }
+ }
+/* width */
+#signup-forms::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+#signup-forms::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgba(39, 27, 83, 0);
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+#signup-forms::-webkit-scrollbar-thumb {
+    background: white; 
+    border-radius: 10px;
+  }
 
 #fixed-container-forms{
     margin:0;
@@ -9,12 +43,10 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    z-index: 2;
+    z-index: 4;
     top: 0; bottom:0; left: 0; right: 0;
     padding-top: 13vh;
     padding-bottom: 13vh;
-    padding-left: 20vw;
-    padding-right: 20vw;
 }
 #fixed-container-forms.hidden{
     display: none;
@@ -25,13 +57,12 @@
     height: 100vh;
     width: 100vw;
     background: rgba(20, 20, 20, 0.8);
-    z-index: 2;
+    z-index: 4;
 }
   
 #signup-forms{
-    z-index: 3; 
+    z-index: 999; 
     padding: 4vw;
-    width: 80%;
     font-family: 'Poppins', sans-serif;
     overflow: auto;
 }
