--- a/styles/signup_form.css
+++ b/styles/signup_form.css
@@ -98,7 +98,7 @@
     outline: none;
     border: none;
     margin-right: 1%;
-    border:rgba(39, 27, 83, 0.9) 1px solid;
+    border: white 1px solid;
 }
 
 #student-signup-btn:hover{
@@ -123,7 +123,7 @@
     border: none;
     margin-left: 1%;
     
-    border:black 1px solid;
+    border:white 1px solid;
 }
 #teacher-signup-btn:hover{
     color: black;
@@ -199,3 +199,46 @@
     background-color: white;
     color:rgba(39, 27, 83, 0.9)
   }
+  #signup-options{
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+    margin: 0;
+  }
+
+/*Sign up custom Google Button*/
+    #customBtn {
+      display: inline-block;
+      background: white;
+      color: #444;
+      border-radius: 5px;
+      border: thin solid #888;
+      box-shadow: 1px 1px 1px grey;
+      white-space: nowrap;
+    }
+    #customBtn:hover {
+      cursor: pointer;
+    }
+    span.label {
+      font-family: serif;
+      font-weight: normal;
+    }
+    span.icon {
+      background-image: url("Google.png");
+      background-size: contain;
+      display: inline-block;
+      vertical-align: middle;
+      width: 42px;
+      height: 42px;
+    }
+    span.buttonText {
+      display: inline-block;
+      vertical-align: middle;
+      padding-left: 42px;
+      padding-right: 42px;
+      font-size: 0.8rem;
+      font-weight: bold;
+      /* Use the Roboto font that is loaded in the <head> */
+      font-family: 'Roboto', sans-serif;
+    }
+/* Sign up with facebook button */
+/* Sign up with e-mail button */
