--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -100,7 +100,7 @@ body{
     margin: 0;
     padding: 0;
     min-height: 800px;
-    overflow-x: hidden;
+    overflow-x: hidden!important;
 }
 p{
     font-family: 'Poppins', sans-serif;
