--- a/styles/signup_form.css
+++ b/styles/signup_form.css
@@ -203,11 +203,15 @@
     padding-top: 3vw;
     padding-bottom: 3vw;
     margin: 0;
+    flex-direction: column;
+    align-items: center;
+  }
+  #signup-options>button{
+    margin: 1vw;
   }
 
 /*Sign up custom Google Button*/
     #customBtn {
-      display: inline-block;
       background: white;
       color: #444;
       border-radius: 5px;
@@ -217,10 +221,11 @@
     }
     #customBtn:hover {
       cursor: pointer;
-    }
-    span.label {
-      font-family: serif;
-      font-weight: normal;
+
+        background: rgb(197, 197, 197);
+        color: black;
+
+  
     }
     span.icon {
       background-image: url("Google.png");
@@ -231,14 +236,51 @@
       height: 42px;
     }
     span.buttonText {
-      display: inline-block;
       vertical-align: middle;
       padding-left: 42px;
       padding-right: 42px;
-      font-size: 0.8rem;
-      font-weight: bold;
+      font-size: 0.9rem;
       /* Use the Roboto font that is loaded in the <head> */
       font-family: 'Roboto', sans-serif;
+      color: black;
     }
 /* Sign up with facebook button */
+  .fb-btn {
+    cursor: pointer;
+    border: 1px solid #3b5998;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+    border-radius: 5px;
+  }
+
+  .fb-btn:hover {
+    background: rgb(197, 197, 197);
+    color: black;
+
+  }
+
+  .signup-facebook-icon {
+    background-color: #45619d;
+    background-image: url("Facebook.png");
+    background-size: 35px;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;
+    height: 42px;
+    width: 42px;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0;
+    margin: 0;   
+  }
+
+  .signup-facebook-text {
+    vertical-align: middle;
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.9rem;
+    text-align: center;
+    padding-left: 42px;
+    padding-right: 42px;
+  }
 /* Sign up with e-mail button */
