--- a/styles/signup_form.css
+++ b/styles/signup_form.css
@@ -3,6 +3,9 @@
     #signup-forms{
         width: 50%;
     }
+    .signup-options>button{
+      width: 60%;
+    }
 
  }
 
@@ -10,11 +13,17 @@
     #signup-forms{
         width: 80%;
     }
+    .signup-options>button{
+      width: 70%;
+    }
 
 }
 @media (max-width: 590px) { 
     #signup-forms{
         width: 95%;
+    }
+    .signup-options>button{
+      width: 90%;
     }
  }
 /* width */
@@ -199,88 +208,94 @@
     background-color: white;
     color:rgba(39, 27, 83, 0.9)
   }
-  #signup-options{
-    padding-top: 3vw;
-    padding-bottom: 3vw;
-    margin: 0;
+  .signup-options{
+    padding-top: 2vw;
+    padding-bottom: 2vw;
     flex-direction: column;
     align-items: center;
+    display: flex;
   }
-  #signup-options>button{
+  .signup-options>button{
+    align-items: center;
     margin: 1vw;
+    padding-top: 0;
+    padding-right: 4%;
+    padding-left: 4%;
+    border-radius: 5px;
+    height: 42px;
+    border: thin solid #888;
+  }
+  .customBtn:hover{
+     background: rgb(197, 197, 197);
   }
 
 /*Sign up custom Google Button*/
-    #customBtn {
-      background: white;
-      color: #444;
-      border-radius: 5px;
-      border: thin solid #888;
-      box-shadow: 1px 1px 1px grey;
-      white-space: nowrap;
-    }
-    #customBtn:hover {
-      cursor: pointer;
-
-        background: rgb(197, 197, 197);
-        color: black;
-
-  
-    }
-    span.icon {
+  .customBtn{
+    background-color: white;
+  }
+    .signup-google-icon {
       background-image: url("Google.png");
-      background-size: contain;
-      display: inline-block;
+      background-size: 35px;
+      background-position: center;
+      background-repeat: no-repeat;
       vertical-align: middle;
       width: 42px;
-      height: 42px;
+      height: 41px;
+      padding: 0;
+      margin: 0;
     }
-    span.buttonText {
+    .signup-google-text {
       vertical-align: middle;
-      padding-left: 42px;
-      padding-right: 42px;
-      font-size: 0.9rem;
-      /* Use the Roboto font that is loaded in the <head> */
       font-family: 'Roboto', sans-serif;
-      color: black;
+      font-size: 0.9rem;
+      text-align: center;
+      padding-left: 40px;
+      padding-right: 40px;
     }
 /* Sign up with facebook button */
-  .fb-btn {
-    cursor: pointer;
-    border: 1px solid #3b5998;
-    padding: 0;
-    margin: 0;
-    align-items: center;
-    border-radius: 5px;
+  .fb-btn{
+    background-color:#3b5998;
   }
-
-  .fb-btn:hover {
-    background: rgb(197, 197, 197);
-    color: black;
-
+  .fb-btn:hover{
+    background-color:rgba(59, 89, 152,0.8);
   }
-
   .signup-facebook-icon {
-    background-color: #45619d;
-    background-image: url("Facebook.png");
-    background-size: 35px;
+    background-color:white;
     background-repeat: no-repeat;
     background-position: center;
-    color: #fff;
-    height: 42px;
-    width: 42px;
-    display: inline-block;
-    vertical-align: middle;
-    padding: 0;
-    margin: 0;   
+    height: 30px;
+    width: 30px;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: #3b5998;
   }
 
   .signup-facebook-text {
+    color: white;
     vertical-align: middle;
     font-family: 'Roboto', sans-serif;
     font-size: 0.9rem;
     text-align: center;
-    padding-left: 42px;
-    padding-right: 42px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
+
 /* Sign up with e-mail button */
+.email-btn{
+  background: lightgray;
+}
+.email-btn:hover{
+  background: 	rgba(211,211,211,0.8);
+  color: black;
+}
+.signup-email-text {
+  vertical-align: middle;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.9rem;
+  text-align: center;
+  padding-left: 40px;
+  padding-right: 40px;
+}
