--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -31,8 +31,6 @@
     .navbar{
         padding-left: 25px !important;
         padding-right: 25px !important;
-    }
-    .navbar{
         background: rgba(107,97,144, 0.8);
     }
     #search-box{
@@ -44,6 +42,11 @@
     }
     .nav-item{
         width: 100%;
+    }
+    .nav-link:hover{
+        background: white;
+        color: black;
+        border-radius: 5px;
     }
     .login-container h2{
         font-size: 2.5em;
@@ -141,7 +144,7 @@ a, a:hover, a:focus{
 }
 
 .navbar a{
-    color: white !important;
+    color: white;
 }
 .title{
     font-size: 1.6em;
@@ -150,9 +153,23 @@ a, a:hover, a:focus{
     letter-spacing: 0.1em;
     width: 20vw;
 }
-.nav-item{
-    font-size: 1em;
-    text-align: center;
+.nav-item{ 
+    font-size: 1rem;    
+    display: flex;
+    align-self: stretch;
+}
+.nav-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+}
+.nav-link:hover{
+    background: white;
+    color: black;
+    
 }
 
 /*spacing around nav elements i.e links and search bar */
@@ -160,9 +177,10 @@ a, a:hover, a:focus{
     padding: 0px;
 }
 .navbar-nav{
-    display:flex;
-    align-items: center;
+
+    display: flex;
     justify-content: center;
+    align-items: center;
 }
 .signout-btn{
     align-self: stretch;
@@ -333,7 +351,7 @@ a, a:hover, a:focus{
     align-self: center;
     padding: 20px;
 }
-.components{
+.sidebar-components{
     overflow: auto;
 }
 #sidebar ul li{
@@ -350,14 +368,14 @@ a, a:hover, a:focus{
     z-index: 2;
 }
 
-.components li>a {
+.sidebar-components li>a {
     height: 100%;
     padding: 10px;
     width: 100%;
     text-align: center;
 }
 
-.components li>a:hover{
+.sidebar-components li>a:hover{
     color: black;
     background: #fff;
 }
