--- a/styles/navbar_sidebar_styles.css
+++ b/styles/navbar_sidebar_styles.css
@@ -61,10 +61,15 @@
     #sidebar{
         position: absolute;
         z-index: 3;
+        transition: all 0.3s;
     }
     #sidebarCollapse{
         position:absolute;
         z-index: 3;
+        width: 30px;
+        height: 35px;
+        transition: all 0.3s;
+
     }
     #sidebarCollapse.move-right{
         transform: translate(200px,0);
@@ -73,10 +78,6 @@
     #search-bar.expand{
         width: calc(100% - 60px);
         transition: width ease 0.3s;
-    }
-    #sidebarCollapse{
-        width: 30px;
-        height: 35px;
     }
  }
 /* width */
@@ -291,6 +292,9 @@ a, a:hover, a:focus{
     z-index: 2;
     padding:0;
     margin: 0;
+    width: 45px;
+    
+
 }
 #sidebarCollapse{
     border-radius: 0px 30px 30px 0px;
@@ -299,15 +303,17 @@ a, a:hover, a:focus{
     border: none;
     margin: 0;
     padding:0;
-    transition: all 0.3s;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s;
+
 }
 
 #sidebarCollapse:hover{
     background:white;
-    background: rgba(107,97,144, 0.8);
+    color: black;
+    transition: all 0.3s;
 }
 
 .icon-default{
@@ -346,6 +352,7 @@ a, a:hover, a:focus{
 }
 #sidebar.active{
     margin-left: -200px;
+
 }
 
 .sidebar-header{
