--- a/styles/search_carousel.css
+++ b/styles/search_carousel.css
@@ -127,6 +127,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 0.8em;
     border-radius: 30px;
   }
@@ -135,6 +136,8 @@
     width: 100%;
     height: 100%;
     padding: 0 10px;
+
+
   }
 
   #searchCarousel{
